Fix: Reduce gap in home container from 120px to 64px

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -8,7 +8,7 @@
   width: 100%;
   min-height: 100vh;
   display: flex;
-  gap: 120px;
+  gap: 64px;
   flex-direction: column;
   position: relative;
   z-index: 1;
